--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Jardins Élégance - Créateurs de Paysages</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Lato', sans-serif;
             margin: 0;
             padding: 0;
             text-align: center;
-            background: #F5F5DC; /* Beige clair */
-            color: #2E4A21; /* Vert foncé */
+            background: #2C2F36; /* Anthracite */
+            color: #F5F5DC; /* Beige clair */
         }
         header {
             background: url('header-bg.jpg') no-repeat center center/cover;
@@ -28,15 +28,19 @@
             margin: 0 20px;
             font-size: 18px;
         }
+        nav a:hover {
+            color: #F5F5DC; /* Beige clair sur hover */
+        }
         section {
             padding: 50px;
-            background: white;
+            background: #333; /* Gris foncé pour les sections */
             margin: 20px;
             border-radius: 10px;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
         }
         h2 {
-            color: #70543E; /* Marron terre */
+            font-family: 'Playfair Display', serif;
+            color: #A1C6B4; /* Vert pâle */
         }
         .image-section {
             text-align: center;
@@ -58,12 +62,16 @@
         .btn {
             display: inline-block;
             padding: 12px 25px;
-            background: #8F9779; /* Beige vert */
+            background: #A1C6B4; /* Vert pâle */
             color: white;
             text-decoration: none;
             border-radius: 5px;
             margin-top: 20px;
             font-size: 18px;
+        }
+        .btn:hover {
+            background: #F5F5DC; /* Beige clair */
+            color: #333; /* Gris foncé */
         }
     </style>
 </head>
