--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jardins Élégance - Créateurs de Paysages</title>
+    <title>Condemine Paysage - Créateurs d'horizons </title>
     <style>
         body {
             font-family: 'Lato', sans-serif;
@@ -78,7 +78,7 @@
 <body>
     <header>
         <h1>Jardins Élégance - Créateurs de Paysages</h1>
-        <p>Transformez votre espace extérieur en un havre de paix naturel</p>
+        <p>Transformez vos espaces en un havre de paix </p>
     </header>
     <nav>
         <a href="index.html">Accueil</a>
@@ -90,30 +90,32 @@
     </nav>
     <section>
         <h2>À Propos de Nous</h2>
-        <p>Fondée en 2005 par Martin Dupont, notre entreprise conçoit des jardins respectueux de l'environnement.</p>
+        <p> Fondée sur la base de la force du lien familial et de la passion de ramener la nature dans nos jardins, notre entreprise conçoit des extérieurs qui vont changer votre horizon. 
+          De votre fenêtre, vous ne verrez plus les choses pareil.</p>
         <div class="image-section">
-            <img src="about.jpg" alt="Équipe de Jardins Élégance">
+            <img src="about.jpg" alt="Notre équipe">
         </div>
     </section>
     <section>
         <h2>Nos Services</h2>
-        <p>De la conception à l’entretien, nous créons des jardins qui évoluent harmonieusement au fil des saisons.</p>
+        <p>De la conception à l’entretien, nous créons des jardins qui évoluent harmonieusement au fil des saisons.
+        Entretien courant de jardin incluant tonte, taille haie, plantation ..., élagage, abattage, terrassement, maçonnerie paysagère. </p>
         <div class="image-section">
             <img src="services.jpg" alt="Conception de jardin">
         </div>
     </section>
     <section>
         <h2>Nos Réalisations</h2>
-        <p>Découvrez nos projets réalisés, du petit jardin urbain aux grands domaines paysagers.</p>
+        <p>Découvrez nos projets réalisés, du petit jardin aux grands domaines paysagers.</p>
         <div class="image-section">
             <img src="portfolio.jpg" alt="Nos réalisations">
         </div>
     </section>
     <section>
         <h2>Pourquoi Nous Choisir</h2>
-        <p>Expertise, approche écologique, garantie satisfaction et prix transparents.</p>
+        <p>Expertise, écoute, approche écoresponsable, garantie satisfaction et prix transparents.</p>
         <div class="image-section">
-            <img src="whyus.jpg" alt="Pourquoi choisir Jardins Élégance">
+            <img src="whyus.jpg" alt="Pourquoi nous choisir ">
         </div>
     </section>
     <section>
@@ -124,7 +126,7 @@
         <a href="contact.html" class="btn">Nous Contacter</a>
     </section>
     <footer>
-        &copy; 2024 Jardins Élégance - Tous droits réservés.
+        &copy; 2024 Condemine Paysage - Tous droits réservés.
     </footer>
 </body>
 </html>
