--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
 </head>
 <body>
     <header>
+        <img src="https://raw.githubusercontent.com/Condemine/condemine.paysage/fc2a06930c3974cb935d8c7bf48adf137da2caa4/Logo%203.jpg" alt="Logo Condemine Paysage" style="height: 60px; vertical-align: middle; margin-right: 15px;">
+        <h1>CONDEMINE PAYSAGE - Créateurs d'horizons</h1>
         <h1>CONDEMINE PAYSAGE - Créateurs d'horizons</h1>
         <p>Transformez vos espaces en un havre de paix</p>
     </header>
