--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
             letter-spacing: 1px;
         }
         nav {
-            background: #2E4A21; /* Vert foncé élégant */
+	display: flex;
+    	justify-content: center;
+            background: #1E1E1E; /* Gris anthracite foncé */
             padding: 15px;
         }
         nav a {
-            color: white;
+            color: #F5F5DC; /* Beige clair */;
             text-decoration: none;
             margin: 0 20px;
             font-size: 18px;
@@ -97,8 +99,7 @@
 </head>
 <body>
     <header>
-        <img src="https://raw.githubusercontent.com/Condemine/condemine.paysage/fc2a06930c3974cb935d8c7bf48adf137da2caa4/Logo%203.jpg" alt="Logo Condemine Paysage" style="height: 60px; vertical-align: middle; margin-right: 15px;">
-        <h1>CONDEMINE PAYSAGE - Créateurs d'horizons</h1>
+	<img src="https://raw.githubusercontent.com/Condemine/condemine.paysage/fc2a06930c3974cb935d8c7bf48adf137da2caa4/Logo%203.jpg" alt="Logo Condemine Paysage" style="height: 180px; vertical-align: middle; margin-right: 15px;">
         <h1>CONDEMINE PAYSAGE - Créateurs d'horizons</h1>
         <p>Transformez vos espaces en un havre de paix</p>
     </header>
