--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             color: #F5F5DC; /* Beige clair */
         }
         header {
-            background: rgba(0, 0, 0, 0.7) url('header-bg.jpg') no-repeat center center/cover;
+            background: rvb(62, 63, 57) url('header-bg.jpg') no-repeat center center/cover;
             background-blend-mode: darken;
-            color: white;
+            color: #F5F5DC; /* Beige clair */;
             padding: 80px 20px;
         }
         h1 {
@@ -99,7 +99,8 @@
 </head>
 <body>
     <header>
-	<img src="https://raw.githubusercontent.com/Condemine/condemine.paysage/fc2a06930c3974cb935d8c7bf48adf137da2caa4/Logo%203.jpg" alt="Logo Condemine Paysage" style="height: 180px; vertical-align: middle; margin-right: 15px;">
+	<img src="https://raw.githubusercontent.com/Condemine/condemine.paysage/fc2a06930c3974cb935d8c7bf48adf137da2caa4/Logo%203.jpg" 
+		alt="Logo Condemine Paysage" style="height: 2200px; left-align: middle; margin-right: 15px;">
         <h1>CONDEMINE PAYSAGE - Créateurs d'horizons</h1>
         <p>Transformez vos espaces en un havre de paix</p>
     </header>
