--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             color: #F5F5DC; /* Beige clair */
         }
         header {
-            background: rvb(62, 63, 57) url('header-bg.jpg') no-repeat center center/cover;
+            background: rgb(62, 63, 57) url('header-bg.jpg') no-repeat center center/cover;
             background-blend-mode: darken;
             color: #F5F5DC; /* Beige clair */;
             padding: 80px 20px;
@@ -100,7 +100,7 @@
 <body>
     <header>
 	<img src="https://raw.githubusercontent.com/Condemine/condemine.paysage/fc2a06930c3974cb935d8c7bf48adf137da2caa4/Logo%203.jpg" 
-		alt="Logo Condemine Paysage" style="height: 2200px; left-align: middle; margin-right: 15px;">
+		alt="Logo Condemine Paysage" style="height: 220px; left-align: middle; margin-right: 15px;">
         <h1>CONDEMINE PAYSAGE - Créateurs d'horizons</h1>
         <p>Transformez vos espaces en un havre de paix</p>
     </header>
