--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CONDEMINE PAYSAGE - Créateurs d'horizons</title>
+    <title>CONDEMINE PAYSAGE <br> Créateurs d'horizons</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Raleway:wght@300;400;600&display=swap');
         
@@ -16,10 +16,13 @@
             color: #F5F5DC; /* Beige clair */
         }
         header {
-            background: rgb(62, 63, 57) url('header-bg.jpg') no-repeat center center/cover;
-            background-blend-mode: darken;
-            color: #F5F5DC; /* Beige clair */;
-            padding: 80px 20px;
+            display: flex;
+    align-items: center; /* Alignement vertical */
+    justify-content: flex-start; /* Alignement à gauche */
+    background: rgb(62, 63, 57) url('header-bg.jpg') no-repeat center center/cover;
+    background-blend-mode: darken;
+    color: #F5F5DC; /* Beige clair */
+    padding: 40px 20px;
         }
         h1 {
             font-family: 'Playfair Display', serif;
@@ -55,7 +58,7 @@
         }
         section {
             padding: 60px 10%;
-            background: #2C2F36; /* Gris anthracite */
+            background: #3E3F39; 
             margin: 30px auto;
             border-radius: 12px;
             box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
@@ -100,7 +103,7 @@
 <body>
     <header>
 	<img src="https://raw.githubusercontent.com/Condemine/condemine.paysage/fc2a06930c3974cb935d8c7bf48adf137da2caa4/Logo%203.jpg" 
-		alt="Logo Condemine Paysage" style="height: 220px; left-align: middle; margin-right: 15px;">
+		alt="Logo Condemine Paysage" style="height: 220px; left-align: middle; margin-right: 20px;">
         <h1>CONDEMINE PAYSAGE - Créateurs d'horizons</h1>
         <p>Transformez vos espaces en un havre de paix</p>
     </header>
