--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
             padding: 15px;
         }
         nav a {
-            color: #F5F5DC; /* Beige clair */;
-            text-decoration: none;
-            margin: 0 20px;
-            font-size: 18px;
-            font-weight: 600;
-            position: relative;
+             font-family: 'Playfair Display', serif; 
+    font-size: 18px;
+    font-weight: 500; /* Optionnel : ajuste l’épaisseur du texte */
+    color: #F5F5DC; /* Beige clair */
+    text-decoration: none;
+    margin: 0 20px;
+    position: relative;
         }
         nav a::after {
             content: "";
