--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CONDEMINE PAYSAGE <br> Créateurs d'horizons</title>
+    <title>CONDEMINE PAYSAGE - Créateurs d'horizons</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Raleway:wght@300;400;600&display=swap');
         
@@ -25,6 +25,7 @@
     padding: 40px 20px;
         }
         h1 {
+	 <h1>CONDEMINE <br>PAYSAGE<br>Créateurs d'horizons</h1>
             font-family: 'Playfair Display', serif;
             font-size: 2.5em;
             font-weight: 700;
