--- a/index.html
+++ b/index.html
@@ -23,11 +23,7 @@
     background-blend-mode: darken;
     color: #F5F5DC; /* Beige clair */
     padding: 40px 20px;
-      	 <h1>CONDEMINE <br>PAYSAGE<br>Créateurs d'horizons</h1>
-            font-family: 'Playfair Display', serif;
-            font-size: 2.5em;
-            font-weight: 700;
-            letter-spacing: 1px;
+      	
         }
         nav {
 	display: flex;
@@ -104,8 +100,12 @@
     <header>
 	<img src="https://raw.githubusercontent.com/Condemine/condemine.paysage/fc2a06930c3974cb935d8c7bf48adf137da2caa4/Logo%203.jpg" 
 		alt="Logo Condemine Paysage" style="height: 220px; left-align: middle; margin-right: 20px;">
-        <h1>CONDEMINE PAYSAGE - Créateurs d'horizons</h1>
-        <p>Transformez vos espaces en un havre de paix</p>
+        <h1>CONDEMINE <br> PAYSAGE <br> Créateurs d'horizons</h1>
+        <p><br>Transformez vos espaces en un havre de paix</p>
+	font-family: 'Playfair Display', serif;
+            font-size: 2.5em;
+            font-weight: 700;
+            letter-spacing: 1px;
     </header>
     <nav>
         <a href="index.html">Accueil</a>
