--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             display: flex;
     align-items: center; /* Alignement vertical */
     justify-content: flex-start; /* Alignement à gauche */
-    background: rgba (0, 0, 0, 0.7) url('header-bg.jpg') no-repeat center center/cover;
+    background: #1E1E1E; url('header-bg.jpg') no-repeat center center/cover;
     background-blend-mode: darken;
     color: #F5F5DC; /* Beige clair */
     padding: 40px 20px;
