--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
             margin: 0;
             padding: 0;
             text-align: center;
-            background: #1E1E1E; /* Gris anthracite foncé */
+            background: #222; /* Gris très foncé */
             color: #F5F5DC; /* Beige clair */
         }
         header {
             display: flex;
     align-items: center; /* Alignement vertical */
     justify-content: flex-start; /* Alignement à gauche */
-    background: #1E1E1E; url('header-bg.jpg') no-repeat center center/cover;
+    background: #222; /* Gris très foncé */ ; url('header-bg.jpg') no-repeat center center/cover;
     background-blend-mode: darken;
     color: #F5F5DC; /* Beige clair */
     padding: 40px 20px;
@@ -33,7 +33,7 @@
         }
         nav a {
              font-family: 'Playfair Display', serif; 
-    font-size: 22px;
+    font-size: 2em;
     font-weight: 500; /* Optionnel : ajuste l’épaisseur du texte */
     color: #F5F5DC; /* Beige clair */
     text-decoration: none;
