--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         }
         nav a {
    font-family: 'Playfair Display', serif; 
-    font-size: 2em;
+    font-size: 24px;
    
     color: #F5F5DC; /* Beige clair */
     text-decoration: none;
