--- a/index.html
+++ b/index.html
@@ -16,13 +16,22 @@
             color: #F5F5DC; /* Beige clair */
         }
         header {
+            background: url('banniere.jpg') no-repeat center center/cover;
+            height: 300px;
             display: flex;
-    align-items: center; /* Alignement vertical */
-    justify-content: flex-start; /* Alignement à gauche */
-    background: #222; /* Gris très foncé */ ; url('header-bg.jpg') no-repeat center center/cover;
-    background-blend-mode: darken;
-    color: #F5F5DC; /* Beige clair */
-    padding: 40px 20px;
+            align-items: center;
+            justify-content: space-between;
+            padding: 20px;
+        }
+        header img {
+            height: 100px;
+        }
+        header h1 {
+            color: white;
+            font-size: 2.5em;
+        }
+    </style>
+	</head>
       	
         }
         nav {
