--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             color: #F5F5DC; /* Beige clair */
         }
         header {
-            background: url('banniere.jpg') no-repeat center center/cover;
+            background: url('') no-repeat center center/cover;
             height: 300px;
             display: flex;
             align-items: center;
