--- a/index.html
+++ b/index.html
@@ -12,68 +12,83 @@
             margin: 0;
             padding: 0;
             text-align: center;
-            background: #222; /* Gris très foncé */
-            color: #F5F5DC; /* Beige clair */
+            background: #222;
+            color: #F5F5DC;
         }
+
         header {
-            background: url('') no-repeat center center/cover;
+            background: url('banniere.jpg') no-repeat center center/cover;
             height: 300px;
             display: flex;
             align-items: center;
             justify-content: space-between;
             padding: 20px;
         }
+
         header img {
             height: 100px;
         }
+
         header h1 {
-            color: white;
+            font-family: 'Playfair Display', serif;
             font-size: 2.5em;
+            font-weight: 700;
+            letter-spacing: 1px;
+            color: white;
+            margin: 0;
         }
-    </style>
-	</head>
-      	
+
+        header p {
+            color: white;
+            font-size: 1.2em;
+            margin-top: 10px;
         }
+
         nav {
-	display: flex;
-    	justify-content: center;
-            background: #1E1E1E; /* Gris anthracite foncé */
+            display: flex;
+            justify-content: center;
+            background: #1E1E1E;
             padding: 15px;
         }
+
         nav a {
-   font-family: 'Playfair Display', serif; 
-    font-size: 22px;
-   
-    color: #F5F5DC; /* Beige clair */
-    text-decoration: none;
-    margin: 0 20px;
-    position: relative;
+            font-family: 'Playfair Display', serif;
+            font-size: 22px;
+            color: #F5F5DC;
+            text-decoration: none;
+            margin: 0 20px;
+            position: relative;
         }
+
         nav a::after {
             content: "";
             display: block;
             width: 0;
             height: 2px;
-            background: #D4AF37; /* Doré subtil */
+            background: #D4AF37;
             transition: width 0.3s;
             margin: auto;
         }
+
         nav a:hover::after {
             width: 100%;
         }
+
         section {
             padding: 60px 10%;
-            background: #3E3F39; 
+            background: #3E3F39;
             margin: 30px auto;
             border-radius: 12px;
             box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
             max-width: 900px;
         }
+
         h2 {
             font-family: 'Playfair Display', serif;
-            color: #A1C6B4; /* Vert pâle élégant */
+            color: #A1C6B4;
             font-size: 2em;
         }
+
         .image-section img {
             width: 100%;
             max-width: 700px;
@@ -81,16 +96,18 @@
             margin: 20px 0;
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
         }
+
         footer {
-            background: #222; /* Gris très foncé */
+            background: #222;
             color: white;
             padding: 20px;
             text-align: center;
         }
+
         .btn {
             display: inline-block;
             padding: 12px 25px;
-            background: #A1C6B4; /* Vert pâle */
+            background: #A1C6B4;
             color: #1E1E1E;
             text-decoration: none;
             border-radius: 5px;
@@ -98,8 +115,9 @@
             font-weight: bold;
             transition: transform 0.2s, background 0.3s;
         }
+
         .btn:hover {
-            background: #D4AF37; /* Doré */
+            background: #D4AF37;
             color: white;
             transform: translateY(-3px);
         }
@@ -107,15 +125,13 @@
 </head>
 <body>
     <header>
-	<img src="https://raw.githubusercontent.com/Condemine/condemine.paysage/fc2a06930c3974cb935d8c7bf48adf137da2caa4/Logo%203.jpg" 
-		alt="Logo Condemine Paysage" style="height: 220px; left-align: middle; margin-right: 20px;">
-        <h1>CONDEMINE <br> PAYSAGE <br> Créateurs d'horizons</h1>
-        <p><br>Transformez vos espaces en un havre de paix</p>
-	font-family: 'Playfair Display', serif;
-            font-size: 2.5em;
-            font-weight: 700;
-            letter-spacing: 1px;
+        <img src="https://raw.githubusercontent.com/Condemine/condemine.paysage/fc2a06930c3974cb935d8c7bf48adf137da2caa4/Logo%203.jpg" alt="Logo Condemine Paysage" style="height: 220px; margin-right: 20px;">
+        <div>
+            <h1>CONDEMINE <br> PAYSAGE <br> Créateurs d'horizons</h1>
+            <p>Transformez vos espaces en un havre de paix</p>
+        </div>
     </header>
+
     <nav>
         <a href="index.html">Accueil</a>
         <a href="about.html">À Propos</a>
@@ -124,14 +140,15 @@
         <a href="whyus.html">Pourquoi Nous Choisir</a>
         <a href="contact.html">Contact</a>
     </nav>
+
     <section>
         <h2>À Propos de Nous</h2>
-        <p>Fondée sur la base de la force du lien familial et de la passion de ramener la nature au cœur de nos jardins, 
-notre entreprise conçoit des extérieurs qui vont changer votre horizon.</p>
+        <p>Fondée sur la base de la force du lien familial et de la passion de ramener la nature au cœur de nos jardins, notre entreprise conçoit des extérieurs qui vont changer votre horizon.</p>
         <div class="image-section">
             <img src="about.jpg" alt="Notre équipe">
         </div>
     </section>
+
     <section>
         <h2>Nos Services</h2>
         <p>De la conception à l’entretien, nous créons des jardins qui évoluent harmonieusement au fil des saisons.</p>
@@ -139,6 +156,7 @@ notre entreprise conçoit des extérieurs qui vont changer votre horizon.</p>
             <img src="services.jpg" alt="Conception de jardin">
         </div>
     </section>
+
     <section>
         <h2>Nos Réalisations</h2>
         <p>Découvrez nos projets réalisés, du petit jardin aux grands domaines paysagers.</p>
@@ -146,6 +164,7 @@ notre entreprise conçoit des extérieurs qui vont changer votre horizon.</p>
             <img src="portfolio.jpg" alt="Nos réalisations">
         </div>
     </section>
+
     <section>
         <h2>Pourquoi Nous Choisir</h2>
         <p>Expertise, écoute, approche écoresponsable, garantie satisfaction et prix transparents.</p>
@@ -153,6 +172,7 @@ notre entreprise conçoit des extérieurs qui vont changer votre horizon.</p>
             <img src="whyus.jpg" alt="Pourquoi nous choisir">
         </div>
     </section>
+
     <section>
         <h2>Contact</h2>
         <p>Email : contact@jardins-elegance.fr</p>
@@ -160,6 +180,7 @@ notre entreprise conçoit des extérieurs qui vont changer votre horizon.</p>
         <p>Adresse : 42 Rue des Fleurs, 75000 Paris</p>
         <a href="contact.html" class="btn">Nous Contacter</a>
     </section>
+
     <footer>
         &copy; 2024 Condemine Paysage - Tous droits réservés.
     </footer>
