--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         }
 
         header {
-            background: url('banniere.jpg') no-repeat center center/cover;
+            background: url('Bandeau.png') no-repeat center center/cover;
             height: 300px;
             display: flex;
             align-items: center;
