--- a/index.html
+++ b/index.html
@@ -124,7 +124,14 @@
     </style>
 </head>
 <body>
-      <nav>
+<header>
+        <img src="https://raw.githubusercontent.com/Condemine/condemine.paysage/fc2a06930c3974cb935d8c7bf48adf137da2caa4/Logo%203.jpg" alt="Logo Condemine Paysage" style="height: 220px; margin-right: 20px;">
+        <div>
+            <h1>CONDEMINE <br> PAYSAGE <br> Créateurs d'horizons</h1>
+            <p>Transformez vos espaces en un havre de paix</p>
+        </div>
+    </header>
+    <nav>
         <a href="index.html">Accueil</a>
         <a href="about.html">À Propos</a>
         <a href="services.html">Nos Services</a>
