--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
         }
 
         header {
-            background: url('Bandeau.png') no-repeat center center/cover;
-            height: 250px;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 20px;
+    background: url('Bandeau.png') no-repeat center center/cover;
+    height: 180px; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+}
         }
 
         header img {
@@ -124,13 +125,7 @@
     </style>
 </head>
 <body>
-<header>
-        <img src="https://raw.githubusercontent.com/Condemine/condemine.paysage/fc2a06930c3974cb935d8c7bf48adf137da2caa4/Logo%203.jpg" alt="Logo Condemine Paysage" style="height: 220px; margin-right: 20px;">
-        <div>
-            <h1>CONDEMINE <br> PAYSAGE <br> Créateurs d'horizons</h1>
-            <p>Transformez vos espaces en un havre de paix</p>
-        </div>
-    </header>
+<header> </header>
     <nav>
         <a href="index.html">Accueil</a>
         <a href="about.html">À Propos</a>
