--- a/index.html
+++ b/index.html
@@ -122,6 +122,72 @@
             color: white;
             transform: translateY(-3px);
         }
+        /* === Responsive design === */
+@media (max-width: 1024px) {
+    header {
+        height: 150px;
+        background-size: contain;
+    }
+
+    nav a {
+        font-size: 18px;
+        margin: 0 10px;
+    }
+
+    section {
+        padding: 40px 5%;
+    }
+
+    h2 {
+        font-size: 1.6em;
+    }
+
+    .btn {
+        font-size: 16px;
+        padding: 10px 20px;
+    }
+}
+
+@media (max-width: 768px) {
+    header {
+        height: 100px;
+        background-size: contain;
+    }
+
+    nav {
+        flex-direction: column;
+        align-items: center;
+        padding: 10px;
+    }
+
+    nav a {
+        margin: 8px 0;
+        font-size: 16px;
+    }
+
+    section {
+        padding: 30px 4%;
+        margin: 20px auto;
+    }
+
+    .image-section img {
+        max-width: 100%;
+        height: auto;
+    }
+
+    h2 {
+        font-size: 1.4em;
+    }
+
+    p {
+        font-size: 16px;
+    }
+
+    .btn {
+        font-size: 14px;
+        padding: 10px 18px;
+    }
+}
     </style>
 </head>
 <body>
