--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
         }
 
         header {
-    background: url('Bandeau.png') no-repeat center center/cover;
-    height: 250px; 
-    display: flex;
+    background: url('Bandeau.png') no-repeat center center;
+             background-size: contain;
+    background-repeat: no-repeat;
+    height: auto;
+    min-height: 250px;
     align-items: center;
     justify-content: center;
-    padding: 0;
+    
              }
             header img {
-            height: 50px;
+            height: 250px;
         }
 
         header h1 {
